--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ h1 {
     font-weight: lighter;
 }
 
+
+/*To separate footage from header*/
+
 .container {
     display: grid;
     grid-template-columns: 1fr;
@@ -28,10 +31,6 @@ h1 {
 
 #container {
     min-height: 100%;
-}
-
-#main {
-    overflow: auto padding-bottom: 100px;
 }
 
 
@@ -94,19 +93,20 @@ h1 {
 /*BREADCRUMBS*/
 
 .breadcrumbs {
-    padding: 10px;
+    padding: none;
     font-family: sans-serif;
     margin-left: 25px;
 }
 
 .breadcrumbs__item {
     display: inline-block;
-    font-size: 14px;
+    font-size: 10px;
 }
 
 .breadcrumbs__item:not(:last-of-type) ::after {
     content: '\203a';
     margin: 0 5px;
+    margin-top: 5px;
     color: grey;
 }
 
@@ -130,8 +130,8 @@ h1 {
 #footer {
     background-color: #000;
     position: relative;
-    height: 100px;
-    margin-top: -100px;
+    height: 20px;
+    margin-top: -20px;
     clear: both;
 }
 
@@ -202,4 +202,128 @@ h1 {
     width: 1200px;
     position: relative;
     float: left;
+}
+
+
+/* Customer attention form */
+
+input[type=text],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+.form-wrapper {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 600px) {
+    .col-25,
+    .col-75,
+    input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
+
+/* Contact form */
+
+input[type=text],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+
+.contactform {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+@media screen and (max-width: 600px) {
+    .col-25,
+    .col-75,
+    .input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
 }
