--- a/style.css
+++ b/style.css
@@ -1,24 +1,38 @@
 /*Master Styles*/
 
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
 html,
 body {
-    height: 100%;
-    padding: 0mm;
+    height: 80%;
+    padding: none;
     background-color: floralwhite;
     margin: 0px
 }
 
 h1 {
-    margin-top: 50px;
+    margin-top: 2%;
     margin-left: 0px;
-    font-size: 60px;
+    font-size: 24px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: lighter;
+}
+
+.banner-wrapper {
+    display: flex;
+    height: 20%;
+    justify-content: space-between;
+    padding: 2%;
+}
+
+.brand {
+    color: #8a8a8a;
+    height: 10%;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
+.brand:hover {
+    border-bottom: 1px solid black;
+    color: black;
 }
 
 
@@ -36,27 +50,10 @@ h1 {
 
 /*Nav Styles*/
 
-.logo-wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding: 38px;
-}
-
-.brand {
-    color: #8a8a8a;
-    text-decoration: none;
-    transition: color 0.5s;
-}
-
-.brand:hover {
-    border-bottom: 1px solid black;
-    color: black;
-}
-
 .nav-wrapper {
     display: flex;
     justify-content: space-between;
-    padding: 38px;
+    padding: 5%;
 }
 
 .upp-down-left-side {
@@ -64,15 +61,9 @@ h1 {
 }
 
 .upp-down-left-side>div {
-    margin-right: 20px;
+    margin-right: 6%;
     font-size: 0.9em;
     text-transform: uppercase;
-}
-
-.nav-link-wrapper {
-    height: 22px;
-    border-bottom: 1px solid transparent;
-    transition: border-bottom 0.5s;
 }
 
 .nav-link-wrapper a {
@@ -130,9 +121,78 @@ h1 {
 #footer {
     background-color: #000;
     position: relative;
-    height: 20px;
-    margin-top: -20px;
+    height: auto;
+    width: 100vw;
+    padding-top: 40px;
+    color: #f2f2f2;
     clear: both;
+}
+
+.footer-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-info h3 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+
+.footer-info p {
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+
+.socials li {
+    margin: 0 10px;
+}
+
+socials a {
+    text-decoration: none;
+    color: #f2f2f2;
+}
+
+.socials a i {
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+}
+
+.socials a:hover i {
+    color: blue;
+}
+
+.footer-bottom {
+    background: #000;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer-bottom p {
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+
+.footer-bottom span {
+    text-transform: uppercase;
+    opacity: 0.4;
+    font-weight: 200;
 }
 
 
@@ -145,9 +205,6 @@ h1 {
     margin-left: 360px;
     margin-top: 20px;
 }
-
-
-/*-------ANIMATION--------*/
 
 @-webkit-keyframes slide_animation {
     0% {
@@ -205,7 +262,28 @@ h1 {
 }
 
 
-/* Customer attention form */
+/* Gallery+Zoom */
+
+.pic {
+    width: 10%;
+    height: 10%;
+}
+
+.picbig {
+    position: absolute;
+    width: 0%;
+    -webkit-transition: width 0.3 linear 0s;
+    transition: width 0.3s linear 0s;
+    z-index: 10;
+}
+
+.pic:hover+.picbig {
+    width: 50%;
+    height: 50%;
+}
+
+
+/* Customer and contact attention form */
 
 input[type=text],
 select,
@@ -267,63 +345,26 @@ input[type=submit] {
 }
 
 
-/* Contact form */
+/* Services details */
 
-input[type=text],
-select,
-textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    resize: vertical;
+.service-wraper {
+    width: 30%;
 }
 
-label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
+.separator {
+    height: 5%;
+    position: relative;
 }
 
-input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
+
+/* About us */
+
+.Who {
+    width: 30%;
+    position: relative;
 }
 
-.contactform {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-}
-
-.col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 6px;
-}
-
-.col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-@media screen and (max-width: 600px) {
-    .col-25,
-    .col-75,
-    .input[type=submit] {
-        width: 100%;
-        margin-top: 0;
-    }
+.video {
+    width: 50%;
+    position: relative;
 }
